<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_memo"
        android:icon="@drawable/ic_news"
        android:title="@string/title_news" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_group"
        android:icon="@drawable/ic_group"
        android:title="@string/title_group" />

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/ic_list"
        android:title="@string/title_list" />
    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/ic_profil"
        android:title="@string/title_profil" />

</menu>
